--- a/mbdyn/manual/input/beam.tex
+++ b/mbdyn/manual/input/beam.tex
@@ -1317,13 +1317,13 @@ The traditional input format is
     \bnt{elem_type} ::= \kw{beam3}
 
     \bnt{normal_arglist} ::=
-        \bnt{node_1_label} , (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{relative_offset_1} ,
-        \bnt{node_2_label} , (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{relative_offset_2} ,
-        \bnt{node_3_label} , (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{relative_offset_3} ,
-        (\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix}) \bnt{orientation_matrix_section_I} ,
-        (\htmlref{\ty{ConstitutiveLaw}\bkw{6D}}{sec:ConstitutiveLaw}) \bnt{constitutive_law_section_I} ,
-        \{ \kw{same} | (\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix}) \bnt{orientation_matrix_section_II} \} ,
-        \{ \kw{same} | (\htmlref{\ty{ConstitutiveLaw}\bkw{6D}}{sec:ConstitutiveLaw}) \bnt{constitutive_law_section_II} \}
+        \bnt{node_1_label} , (\hty{Vec3}) \bnt{relative_offset_1} ,
+        \bnt{node_2_label} , (\hty{Vec3}) \bnt{relative_offset_2} ,
+        \bnt{node_3_label} , (\hty{Vec3}) \bnt{relative_offset_3} ,
+        (\hty{OrientationMatrix}) \bnt{orientation_matrix_section_I} ,
+        (\htybkw{ConstitutiveLaw}{6D}) \bnt{constitutive_law_section_I} ,
+        \{ \kw{same} | (\hty{OrientationMatrix}) \bnt{orientation_matrix_section_II} \} ,
+        \{ \kw{same} | (\htybkw{ConstitutiveLaw}{6D}) \bnt{constitutive_law_section_II} \}
         [ , \bnt{custom_output} ]
 \end{Verbatim}
 %\end{verbatim}
@@ -1354,22 +1354,22 @@ A more complete input format is
 
     \bnt{normal_arglist} ::=
         \bnt{node_1_label} ,
-            [ \kw{position} , ] (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{relative_offset_1} ,
-            [ \kw{orientation} , (\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix}) \bnt{relative_orientation_1} , ]
+            [ \kw{position} , ] (\hty{Vec3}) \bnt{relative_offset_1} ,
+            [ \kw{orientation} , (\hty{OrientationMatrix}) \bnt{relative_orientation_1} , ]
         \bnt{node_2_label} ,
-            [ \kw{position} , ] (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{relative_offset_2} ,
-            [ \kw{orientation} , (\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix}) \bnt{relative_orientation_2} , ]
+            [ \kw{position} , ] (\hty{Vec3}) \bnt{relative_offset_2} ,
+            [ \kw{orientation} , (\hty{OrientationMatrix}) \bnt{relative_orientation_2} , ]
         \bnt{node_3} ,
-            [ \kw{position} , ] (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{relative_offset_3} ,
-            [ \kw{orientation} , (\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix}) \bnt{relative_orientation_3} , ]
-        \{ (\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix}) \bnt{orientation_matrix_section_I}
+            [ \kw{position} , ] (\hty{Vec3}) \bnt{relative_offset_3} ,
+            [ \kw{orientation} , (\hty{OrientationMatrix}) \bnt{relative_orientation_3} , ]
+        \{ (\hty{OrientationMatrix}) \bnt{orientation_matrix_section_I}
             | \kw{from nodes} \} ,
-        (\htmlref{\ty{ConstitutiveLaw}\bkw{6D}}{sec:ConstitutiveLaw}) \bnt{constitutive_law_section_I} ,
+        (\htybkw{ConstitutiveLaw}{6D}) \bnt{constitutive_law_section_I} ,
         \{ \kw{same}
-            | (\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix}) \bnt{orientation_matrix_section_II}
+            | (\hty{OrientationMatrix}) \bnt{orientation_matrix_section_II}
             | \kw{from nodes} \} ,
         \{ \kw{same}
-            | (\htmlref{\ty{ConstitutiveLaw}\bkw{6D}}{sec:ConstitutiveLaw}) \bnt{constitutive_law_section_II} \}
+            | (\htybkw{ConstitutiveLaw}{6D}) \bnt{constitutive_law_section_II} \}
         [ , \bnt{custom_output} ]
 \end{Verbatim}
 %\end{verbatim}
@@ -1467,18 +1467,18 @@ of the abstract nodes that represent the input signal tensions, as follows:
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \bnt{normal_arglist} ::=
-        \bnt{node_1_label} , (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{relative_offset_1} ,
-        \bnt{node_2_label} , (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{relative_offset_2} ,
-        \bnt{node_3_label} , (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{relative_offset_3} ,
-        (\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix}) \bnt{orientation_matrix_section_I} ,
-        (\htmlref{\ty{ConstitutiveLaw}\bkw{6D}}{sec:ConstitutiveLaw}) \bnt{constitutive_law_section_I} ,
-        \{ \kw{same} | (\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix}) \bnt{orientation_matrix_section_II} \} ,
-        \{ \kw{same} | (\htmlref{\ty{ConstitutiveLaw}\bkw{6D}}{sec:ConstitutiveLaw}) \bnt{constitutive_law_section_II} \} ,
+        \bnt{node_1_label} , (\hty{Vec3}) \bnt{relative_offset_1} ,
+        \bnt{node_2_label} , (\hty{Vec3}) \bnt{relative_offset_2} ,
+        \bnt{node_3_label} , (\hty{Vec3}) \bnt{relative_offset_3} ,
+        (\hty{OrientationMatrix}) \bnt{orientation_matrix_section_I} ,
+        (\htybkw{ConstitutiveLaw}{6D}) \bnt{constitutive_law_section_I} ,
+        \{ \kw{same} | (\hty{OrientationMatrix}) \bnt{orientation_matrix_section_II} \} ,
+        \{ \kw{same} | (\htybkw{ConstitutiveLaw}{6D}) \bnt{constitutive_law_section_II} \} ,
         \kw{piezoelectric actuator} , 
             \bnt{electrodes_number} ,
             \bnt{abstract_node_label_list} ,
-            (\htmlref{\ty{Mat6xN}}{sec:Mat6xN}) \bnt{piezoelectric_matrix_I} ,
-            \{ \kw{same} | (\htmlref{\ty{Mat6xN}}{sec:Mat6xN}) \bnt{piezoelectric_matrix_II} \}
+            (\hty{Mat6xN}) \bnt{piezoelectric_matrix_I} ,
+            \{ \kw{same} | (\hty{Mat6xN}) \bnt{piezoelectric_matrix_II} \}
         [ , \bnt{custom_output} ]
 \end{Verbatim}
 %\end{verbatim}
@@ -1561,14 +1561,14 @@ The syntax is
     \bnt{elem_type} ::= \kw{beam2}
 
     \bnt{normal_arglist} ::=
-        \bnt{node_1_label} , (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{relative_offset_1} ,
-        \bnt{node_2_label} , (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{relative_offset_2} ,
-        (\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix}) \bnt{orientation_matrix_section_I} ,
-        (\htmlref{\ty{ConstitutiveLaw}\bkw{6D}}{sec:ConstitutiveLaw}) \bnt{constitutive_law_section_I}
+        \bnt{node_1_label} , (\hty{Vec3}) \bnt{relative_offset_1} ,
+        \bnt{node_2_label} , (\hty{Vec3}) \bnt{relative_offset_2} ,
+        (\hty{OrientationMatrix}) \bnt{orientation_matrix_section_I} ,
+        (\htybkw{ConstitutiveLaw}{6D}) \bnt{constitutive_law_section_I}
         [ , \kw{piezoelectric actuator} , 
             \bnt{electrodes_number} ,
             \bnt{abstract_node_label_list} ,
-            (\htmlref{\ty{Mat6xN}}{sec:Mat6xN}) \bnt{piezoelectric_matrix_I} ]
+            (\hty{Mat6xN}) \bnt{piezoelectric_matrix_I} ]
         [ , \bnt{custom_output} ]
 \end{Verbatim}
 %\end{verbatim}
@@ -1580,18 +1580,18 @@ A more complete form is
 
     \bnt{normal_arglist} ::=
         \bnt{node_1_label} ,
-            [ \kw{position} , ] (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{relative_offset_1} ,
-            [ \kw{orientation} , (\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix}) \bnt{relative_orientation_1} , ]
+            [ \kw{position} , ] (\hty{Vec3}) \bnt{relative_offset_1} ,
+            [ \kw{orientation} , (\hty{OrientationMatrix}) \bnt{relative_orientation_1} , ]
         \bnt{node_2_label} ,
-            [ \kw{position} , ] (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{relative_offset_2} ,
-            [ \kw{orientation} , (\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix}) \bnt{relative_orientation_2} , ]
-        \{ (\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix}) \bnt{orientation_matrix_section_I}
+            [ \kw{position} , ] (\hty{Vec3}) \bnt{relative_offset_2} ,
+            [ \kw{orientation} , (\hty{OrientationMatrix}) \bnt{relative_orientation_2} , ]
+        \{ (\hty{OrientationMatrix}) \bnt{orientation_matrix_section_I}
             | \kw{from nodes} \} ,
-        (\htmlref{\ty{ConstitutiveLaw}\bkw{6D}}{sec:ConstitutiveLaw}) \bnt{constitutive_law_section_I}
+        (\htybkw{ConstitutiveLaw}{6D}) \bnt{constitutive_law_section_I}
         [ , \kw{piezoelectric actuator} , 
             \bnt{electrodes_number} ,
             \bnt{abstract_node_label_list} ,
-            (\htmlref{\ty{Mat6xN}}{sec:Mat6xN}) \bnt{piezoelectric_matrix_I} ]
+            (\hty{Mat6xN}) \bnt{piezoelectric_matrix_I} ]
         [ , \bnt{custom_output} ]
 \end{Verbatim}
 %\end{verbatim}
