--- a/mbdyn/manual/input/elemaero.tex
+++ b/mbdyn/manual/input/elemaero.tex
@@ -45,13 +45,13 @@ The input format is:
     \bnt{elem_type} ::= \{ \kw{aerodynamic body} | \kw{aerodynamic beam2} | \kw{aerodynamic beam3} \}
 
     \bnt{normal_arglist} ::= \bnt{connectivity} ,
-        (\htmlref{\ty{Shape}<\kw{1D}>}{sec:Shape})          \bnt{surface_chord} ,
-        (\htmlref{\ty{Shape}<\kw{1D}>}{sec:Shape})          \bnt{surface_aerodynamic_center} ,
-        (\htmlref{\ty{Shape}<\kw{1D}>}{sec:Shape})          \bnt{surface_b_c_point} ,
-        (\htmlref{\ty{Shape}<\kw{1D}>}{sec:Shape})          \bnt{surface_twist} ,
-        [ \kw{tip loss} , (\htmlref{\ty{Shape}<\kw{1D}>}{sec:Shape}) \bnt{tip_loss} , ]
+        (\htybkw{Shape}{1D})          \bnt{surface_chord} ,
+        (\htybkw{Shape}{1D})          \bnt{surface_aerodynamic_center} ,
+        (\htybkw{Shape}{1D})          \bnt{surface_b_c_point} ,
+        (\htybkw{Shape}{1D})          \bnt{surface_twist} ,
+        [ \kw{tip loss} , (\htybkw{Shape}{1D}) \bnt{tip_loss} , ]
         \bnt{integration_points}
-        [ , \kw{control} , (\htmlref{\ty{DriveCaller}}{sec:DriveCaller}) \bnt{control_drive} ] 
+        [ , \kw{control} , (\hty{DriveCaller}) \bnt{control_drive} ] 
         [ , \bnt{airfoil_data} ]
         [ , \kw{unsteady} , \{ \kw{bielawa} \} ]
         [ , \kw{jacobian} , \{ \kw{yes} | \kw{no} | \bnt{bool} \} ]
@@ -69,29 +69,29 @@ where
     \bnt{body_conn} ::= \bnt{node_label}
         [ , [ \kw{user defined} ] \kw{induced velocity} , \bnt{induced_velocity_label}
             [ , \kw{passive} ] , ] 
-        (\htmlref{\ty{Vec3}}{sec:Vec3})              <relative_surface_offset> , 
-        (\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix}) <relative_surface_orientation> ,
+        (\hty{Vec3})              <relative_surface_offset> , 
+        (\hty{OrientationMatrix}) <relative_surface_orientation> ,
         (\ty{real})            <surface_span>
 
     # \bnt{elem_type} ::= \kw{aerodynamic beam2}
     \bnt{beam2_conn} ::= \bnt{beam2_label}
         [ , [ \kw{user defined} ] \kw{induced velocity} , \bnt{induced_velocity_label}
             [ , \kw{passive} ] , ] 
-        (\htmlref{\ty{Vec3}}{sec:Vec3})              \bnt{relative_surface_offset_1} ,
-        (\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix}) \bnt{relative_surface_orientation_1} ,
-        (\htmlref{\ty{Vec3}}{sec:Vec3})              \bnt{relative_surface_offset_2} ,
-        (\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix}) \bnt{relative_surface_orientation_2} ,
+        (\hty{Vec3})              \bnt{relative_surface_offset_1} ,
+        (\hty{OrientationMatrix}) \bnt{relative_surface_orientation_1} ,
+        (\hty{Vec3})              \bnt{relative_surface_offset_2} ,
+        (\hty{OrientationMatrix}) \bnt{relative_surface_orientation_2} ,
 
     # \bnt{elem_type} ::= \kw{aerodynamic beam3}
     \bnt{beam3_conn} ::= \bnt{beam3_label} 
         [ , [ \kw{user defined} ] \kw{induced velocity} , \bnt{induced_velocity_label}
             [ , \kw{passive} ] , ] 
-        (\htmlref{\ty{Vec3}}{sec:Vec3})              \bnt{relative_surface_offset_1} ,
-        (\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix}) \bnt{relative_surface_orientation_1} ,
-        (\htmlref{\ty{Vec3}}{sec:Vec3})              \bnt{relative_surface_offset_2} ,
-        (\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix}) \bnt{relative_surface_orientation_2} ,
-        (\htmlref{\ty{Vec3}}{sec:Vec3})              \bnt{relative_surface_offset_3} ,       
-        (\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix}) \bnt{relative_surface_orientation_3} ,
+        (\hty{Vec3})              \bnt{relative_surface_offset_1} ,
+        (\hty{OrientationMatrix}) \bnt{relative_surface_orientation_1} ,
+        (\hty{Vec3})              \bnt{relative_surface_offset_2} ,
+        (\hty{OrientationMatrix}) \bnt{relative_surface_orientation_2} ,
+        (\hty{Vec3})              \bnt{relative_surface_offset_3} ,       
+        (\hty{OrientationMatrix}) \bnt{relative_surface_orientation_3} ,
 
     \bnt{airfoil_data} ::=
         \{ \kw{naca 0012}
@@ -145,7 +145,7 @@ This means that the aerodynamic beam offsets refer to the position
 of the beam's nodes, and have nothing to do with offsets related
 to the structural beam element.
 
-The \htmlref{\ty{Shape}<\kw{1D}>}{sec:Shape} entities are used to compute the physical chord,
+The \htybkw{Shape}{1D} entities are used to compute the physical chord,
 aerodynamic center, velocity measurement point (the point where the
 kinematic boundary conditions are evaluated) and twist as functions 
 of the dimensionless abscissa along the span.
@@ -319,7 +319,7 @@ This element is defined as follows:
 
     \bnt{normal_arglist} ::= 
         \bnt{reference_modal_joint} ,
-        (\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix}) \bnt{orientation} ,
+        (\hty{OrientationMatrix}) \bnt{orientation} ,
         \bnt{reference_chord} ,
         \bnt{number_of_aerodynamic_states} ,
         [ \kw{rigid} , ]
@@ -431,7 +431,7 @@ All quantities are expressed in inches and pounds.
 
     \bnt{normal_arglist} ::= \bnt{aircraft_node}
         [ , \kw{orientation} , \{ \kw{flight mechanics} | \kw{aeroelasticity}
-            | (\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix}) \bnt{relative_orientation} \} ]
+            | (\hty{OrientationMatrix}) \bnt{relative_orientation} \} ]
 \end{Verbatim}
 %\end{verbatim}
 The \nt{aircraft\_node} represents the aircraft; it is assumed
@@ -542,19 +542,19 @@ The properties of the airstream are made of the physical properties
 of the air plus the description of the airstream velocity direction
 and amplitude.
 The former can be expressed in different forms, while the latter
-are based on three-dimensional drive callers, \htmlref{\ty{TplDriveCaller}\bty{Vec3}}{sec:TplDriveCaller}.
+are based on three-dimensional drive callers, \htybty{TplDriveCaller}{Vec3}.
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \bnt{elem_type} ::= \kw{air properties}
 
     \bnt{arglist} ::=
-        \{ (\htmlref{\ty{DriveCaller}}{sec:DriveCaller}) \bnt{air_density} , (\ty{real}) \bnt{sound_celerity}
+        \{ (\hty{DriveCaller}) \bnt{air_density} , (\ty{real}) \bnt{sound_celerity}
             | \kw{std} , \{ \{ \kw{SI} | \kw{British} \}
                 [ , \kw{temperature deviation} , \bnt{delta_T} ]
-                | \bnt{p0} , (\htmlref{\ty{DriveCaller}}{sec:DriveCaller}) \bnt{rho0} ,
+                | \bnt{p0} , (\hty{DriveCaller}) \bnt{rho0} ,
                     \bnt{T0} , \bnt{dT/dz} , \bnt{R} , \bnt{g0} , \bnt{z1} , \bnt{z2} \}
             [ , \kw{reference altitude} , \bnt{z0} ] \} ,
-        (\htmlref{\ty{TplDriveCaller}\bty{Vec3}}{sec:TplDriveCaller}) \bnt{air_speed}
+        (\htybty{TplDriveCaller}{Vec3}) \bnt{air_speed}
         [ , \kw{gust} , \bnt{gust_model} [ , ... ] ]
 \end{Verbatim}
 %\end{verbatim}
@@ -631,7 +631,7 @@ of the position where the air properties are computed
 to the reference altitude \nt{z0}.
 
 The asymptotic air properties are characterized by \nt{air\_speed},
-the \htmlref{\ty{TplDriveCaller}\bty{Vec3}}{sec:TplDriveCaller} of the air speed,
+the \htybty{TplDriveCaller}{Vec3} of the air speed,
 expressed in the global reference frame.
 The possibility to vary the density and the airspeed using a driver
 has little physical meaning, especially the former;
@@ -658,10 +658,10 @@ The syntax of the \kw{front 1D} gust model is:
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \bnt{gust_model} ::= \kw{front 1D} ,
-        (\htmlref{\ty{Vec3}}{sec:Vec3})        \bnt{front_direction} ,
-        (\htmlref{\ty{Vec3}}{sec:Vec3})        \bnt{perturbation_direction} ,
+        (\hty{Vec3})        \bnt{front_direction} ,
+        (\hty{Vec3})        \bnt{perturbation_direction} ,
         (\ty{real})      \bnt{front_velocity} ,
-        (\htmlref{\ty{DriveCaller}}{sec:DriveCaller}) \bnt{front_profile}
+        (\hty{DriveCaller}) \bnt{front_profile}
 \end{Verbatim}
 %\end{verbatim}
 This model consists in a uniform front, defined as
@@ -707,9 +707,9 @@ implemented as a gust model within the \kw{air properties}, is:
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \bnt{gust_model} ::= \kw{scalar function} ,
-        \kw{reference position} , (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{X0} ,
-        \kw{reference orientation} , (\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix}) \bnt{R0} ,
-        (\htmlref{\ty{ScalarFunction}}{sec:ScalarFunction}) \bnt{sf}
+        \kw{reference position} , (\hty{Vec3}) \bnt{X0} ,
+        \kw{reference orientation} , (\hty{OrientationMatrix}) \bnt{R0} ,
+        (\hty{ScalarFunction}) \bnt{sf}
 \end{Verbatim}
 %\end{verbatim}
 It yields a uniform velocity profile along the $x$ axis of the
@@ -736,10 +736,10 @@ within the \kw{air properties}, is:
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \bnt{gust_model} ::= \kw{power law} ,
-        \kw{reference position} , (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{X0} ,
-        \kw{reference orientation} , (\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix}) \bnt{R0} ,
+        \kw{reference position} , (\hty{Vec3}) \bnt{X0} ,
+        \kw{reference orientation} , (\hty{OrientationMatrix}) \bnt{R0} ,
         \kw{reference elevation} , \bnt{z_ref} ,
-        \kw{reference velocity} , (\htmlref{\ty{DriveCaller}}{sec:DriveCaller}) \bnt{v_ref} ,
+        \kw{reference velocity} , (\hty{DriveCaller}) \bnt{v_ref} ,
         \kw{exponent} , \bnt{exponent}
 \end{Verbatim}
 %\end{verbatim}
@@ -768,10 +768,10 @@ within the \kw{air properties}, is:
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \bnt{gust_model} ::= \kw{logarithmic} ,
-        \kw{reference position} , (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{X0} ,
-        \kw{reference orientation} , (\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix}) \bnt{R0} ,
+        \kw{reference position} , (\hty{Vec3}) \bnt{X0} ,
+        \kw{reference orientation} , (\hty{OrientationMatrix}) \bnt{R0} ,
         \kw{reference elevation} , \bnt{z_ref} ,
-        \kw{reference velocity} , (\htmlref{\ty{DriveCaller}}{sec:DriveCaller}) \bnt{v_ref} ,
+        \kw{reference velocity} , (\hty{DriveCaller}) \bnt{v_ref} ,
         \kw{surface roughness length} , \bnt{z_0}
 \end{Verbatim}
 %\end{verbatim}
@@ -860,9 +860,9 @@ from that of the node \nt{node\_label} by the orientation matrix
 \nt{relative\_orientation} (defaults to \kw{eye}), namely
 \begin{subequations}
 \begin{align}
-	\TT{o} &= \text{(\htmlref{\ty{Vec3}}{sec:Vec3})} \ \nt{relative\_position}
+	\TT{o} &= \text{(\hty{Vec3})} \ \nt{relative\_position}
 	\\
-	\TT{R}_h &= \text{(\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix})}\ \nt{relative\_orientation}
+	\TT{R}_h &= \text{(\hty{OrientationMatrix})}\ \nt{relative\_orientation}
 	\\
 	\TT{v} &= \TT{R}_h^T \TT{R}_n^T \plbr{
 		\dot{\T{x}}_n + \T{\omega}_n \times \TT{R}_n \TT{o}
@@ -1110,7 +1110,7 @@ The syntax of the helicopter rotor \kw{induced velocity} element is:
     \bnt{induced_velocity_type} ::= \kw{rotor}
 
     \bnt{induced_velocity_data} ::= \bnt{craft_node} ,
-            [ \kw{orientation} , (\htmlref{\ty{OrientationMatrix}}{sec:OrientationMatrix}) \bnt{rotor_orientation} , ]
+            [ \kw{orientation} , (\hty{OrientationMatrix}) \bnt{rotor_orientation} , ]
         \bnt{rotor_node} ,
         \kw{induced velocity} , \bnt{induced_velocity_model}
 \end{Verbatim}
@@ -1145,7 +1145,7 @@ models:
 
     \bnt{option} ::=
         \{ \kw{ground} , \bnt{ground_node}
-            | \kw{delay} , (\htmlref{\ty{DriveCaller}}{sec:DriveCaller}) \bnt{memory_factor}
+            | \kw{delay} , (\hty{DriveCaller}) \bnt{memory_factor}
             | \kw{max iterations} , \bnt{max_iterations}
             | \kw{tolerance} , \bnt{tolerance}
             | \kw{eta} , \bnt{eta}
