--- a/mbdyn/manual/input/elemplate.tex
+++ b/mbdyn/manual/input/elemplate.tex
@@ -161,7 +161,7 @@ The syntax is
             | \kw{sym} , \bnt{upper_triangular_3x3_matrix}
             | \kw{diag} , \bnt{diagonal_3x3_matrix}
             | \kw{isotropic} , \bnt{isotropic_data} \}
-        [ , \kw{prestress} , (\htmlref{\ty{Vec3}}{sec:Vec3}) \bnt{prestress} ]
+        [ , \kw{prestress} , (\hty{Vec3}) \bnt{prestress} ]
 
     \bnt{isotropic_data} ::=
         \{ \{ \kw{E} | \kw{Young modulus} \} , \bnt{E}
