--- a/mbdyn/manual/input/problems.tex
+++ b/mbdyn/manual/input/problems.tex
@@ -148,7 +148,7 @@ are performed without converging.
 \begin{Verbatim}[commandchars=\\\{\}]
     \bnt{strategy_type} ::= \kw{change}
 
-    \bnt{strategy_data} ::= (\htmlref{\ty{DriveCaller}}{sec:DriveCaller}) \bnt{time_step_pattern}
+    \bnt{strategy_data} ::= (\hty{DriveCaller}) \bnt{time_step_pattern}
 \end{Verbatim}
 %\end{verbatim}
 the time step is changed according to the \nt{time\_step\_pattern} pattern.
@@ -158,7 +158,7 @@ when a step needs to be repeated, the analysis is interrupted.
 Note: the \kw{change} strategy is not normally intended to provide
 adaptive time step, it rather allows to prescribe a given
 variable time step pattern based on the rule defined
-by the \nt{time\_step\_pattern} \htmlref{\ty{DriveCaller}}{sec:DriveCaller}.
+by the \nt{time\_step\_pattern} \hty{DriveCaller}.
 \end{itemize}
 In any case, step change only occurs after the first step, which is performed
 using the \nt{time\_step} value provided with the \kw{time step} statement.
@@ -336,8 +336,8 @@ dependent radius variation.
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \bnt{method_data} ::= \{ \kw{ms} | \kw{hope} \} ,
-        (\htmlref{\ty{DriveCaller}}{sec:DriveCaller}) \bnt{differential_radius}
-        [ , (\htmlref{\ty{DriveCaller}}{sec:DriveCaller}) \bnt{algebraic_radius} ]
+        (\hty{DriveCaller}) \bnt{differential_radius}
+        [ , (\hty{DriveCaller}) \bnt{algebraic_radius} ]
 \end{Verbatim}
 %\end{verbatim}
 The first method proved to be more accurate at high values of asymptotic
@@ -361,7 +361,7 @@ for the differential and the algebraic variables.
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
     \bnt{method_data} ::= \kw{third order} ,
-        \{ \kw{ad hoc} | (\htmlref{\ty{DriveCaller}}{sec:DriveCaller}) \bnt{differential_radius} \}
+        \{ \kw{ad hoc} | (\hty{DriveCaller}) \bnt{differential_radius} \}
 \end{Verbatim}
 %\end{verbatim}
 When the keyword \kw{ad hoc} is used, a method equivalent
@@ -1331,7 +1331,7 @@ to a meter, expressed in terms of a drive caller.
 Only when the drive caller returns \texttt{true} (!0), the output occurs.
 %\begin{verbatim}
 \begin{Verbatim}[commandchars=\\\{\}]
-    \bnt{card} ::= \kw{output meter} : (\htmlref{\ty{DriveCaller}}{sec:DriveCaller}) \bnt{when} ;
+    \bnt{card} ::= \kw{output meter} : (\hty{DriveCaller}) \bnt{when} ;
 \end{Verbatim}
 %\end{verbatim}
 
